syntax = "proto3";

import "common.proto";

package faas;

message FunctionConfiguration {
  string function_name = 1;
  uint32 runtime_tag = 2;
  string code = 3;
}

message DetailedFunction {
  uint32 function_id = 1;
  uint32 runtime_tag = 2;
  string function_name = 3;
  string code = 4;
}

message BriefFunction {
  uint32 function_id = 1;
  uint32 runtime_tag = 2;
  string function_name = 3;
}

service FunctionService {
  rpc CreateFunction(FunctionConfiguration) returns (DetailedFunction);
  rpc EditFunction(FunctionConfiguration) returns (DetailedFunction);
  rpc DeleteFunction(BriefFunction) returns (Empty);
  rpc GetFunction(BriefFunction) returns (DetailedFunction);
  rpc GetFunctions(Empty) returns (stream BriefFunction);
}
